# libusermetrics

./: .bzrignore  CMakeLists.txt  README.md  build.sh
cmake/: Doxyfile.in  FindGMock.cmake  FindLocalGTest.cmake  FindValgrind.cmake  FindXGettext.cmake  UseDoxygen.cmake  UseGSettings.cmake
data/: CMakeLists.txt  com.canonical.UserMetrics.DataSet.xml  com.canonical.UserMetrics.DataSource.xml  com.canonical.UserMetrics.UserData.xml  com.canonical.UserMetrics.conf  com.canonical.UserMetrics.gschema.xml  com.canonical.UserMetrics.service.in  com.canonical.UserMetrics.xml  com.canonical.usermetrics.DataSet.xml  com.canonical.usermetrics.DataSource.xml  com.canonical.usermetrics.UserData.xml  com.canonical.usermetrics.service.in
data/themes/: color-theme.xsd
debian/: README  README.Debian  README.source  changelog  control  copyright  init.d.ex  libusermetrics.cron.d.ex  libusermetrics.default.ex  libusermetrics1-dev.install  libusermetricsinput1-dev.install  libusermetricsinput1.install  libusermetricsinput1.symbols  libusermetricsoutput1-dev.install  libusermetricsoutput1.doc-base  libusermetricsoutput1.install  libusermetricsoutput1.symbols  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  qtdeclarative5-usermetrics0.1.install  rules  shlibs.local.ex  usermetricsservice.install  usermetricsservice.postinst  usermetricsservice.postrm  usermetricsservice.preinst  usermetricsservice.prerm  watch.ex
doc/: CMakeLists.txt  installing_prebuilt.md  mainpage.md
doc/pages/: building_source.md  installing_prebuilt.md  mainpage.md
examples/: MetricManagerAdvanced.cpp  MetricManagerAdvancedCAPI.c  MetricManagerCAPI.c  MetricManagerIncrementToday.cpp  MetricManagerIncrementTodayCAPI.c  (+6 more)
po/: CMakeLists.txt  am.po  ar.po  br.po  bs.po  ca.po  cs.po  de.po  el.po  en_GB.po  es.po  fi.po  fr.po  gd.po  gl.po  hu.po  ia.po  it.po  ja.po  libusermetrics.pot  mr.po  ms.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sq.po  sr.po  sv.po  tr.po  ug.po  uk.po  zh_CN.po  zh_TW.po
src/libusermetrics-output/: CMakeLists.txt  InfographicModel.cpp  InfographicModelPrivate.cpp  InfographicModelPrivate.h
src/libusermetricscommon/: CMakeLists.txt  DBusPaths.cpp  DBusPaths.h  DateFactory.cpp  DateFactory.h  DateFactoryImpl.cpp  DateFactoryImpl.h  Localisation.cpp  Localisation.h
src/libusermetricsinput/: CMakeLists.txt  Metric.cpp  Metric.h  MetricImpl.cpp  MetricImpl.h  MetricManager.cpp  MetricManager.h  MetricManagerImpl.cpp  MetricManagerImpl.h  MetricUpdate.cpp  MetricUpdate.h  MetricUpdateImpl.cpp  MetricUpdateImpl.h  libusermetricsinput.pc.in  main-increment.cpp  main.cpp  usermetricsinput.cpp  usermetricsinput.h
src/libusermetricsoutput/: CMakeLists.txt  ColorTheme.cpp  ColorTheme.h  ColorThemeImpl.cpp  ColorThemeImpl.h  ColorThemeProvider.cpp  ColorThemeProvider.h  DataSet.cpp  DataSet.h  DataSource.cpp  DataSource.h  DateFactory.cpp  DateFactory.h  DateFactoryImpl.cpp  DateFactoryImpl.h  FakeData.cpp  GSettingsColorThemeProvider.cpp  GSettingsColorThemeProvider.h  HardCodedColorThemeProvider.cpp  HardCodedColorThemeProvider.h  InfographicColorTheme.cpp  InfographicColorTheme.h  InfographicColorThemeImpl.cpp  InfographicColorThemeImpl.h  InfographicData.cpp  InfographicData.h  InfographicModel.cpp  InfographicModel.h  InfographicModelImpl.cpp  InfographicModelImpl.h  InfographicModelPrivate.cpp  InfographicModelPrivate.h  SyncedDataSet.cpp  SyncedDataSet.h  SyncedDataSource.cpp  SyncedDataSource.h  SyncedUserData.cpp  SyncedUserData.h  SyncedUserMetricsStore.cpp  SyncedUserMetricsStore.h  (+12 more)
src/modules/UserMetrics/: CMakeLists.txt  Components.cpp  Components.h  Metric.cpp  Metric.h  components.cpp  metric.cpp  metric.h  qmldir
src/usermetricsservice/: Authentication.cpp  Authentication.h  CMakeLists.txt  DBusDataSet.cpp  DBusDataSet.h  DBusDataSource.cpp  DBusDataSource.h  DBusUserData.cpp  DBusUserData.h  DBusUserMetrics.cpp  DBusUserMetrics.h  DataSource.cpp  DataSource.h  TranslationLocator.h  TranslationLocatorImpl.cpp  TranslationLocatorImpl.h  main.cpp
src/usermetricsservice/database/: DataSet.cpp  DataSet.h  DataSource.cpp  DataSource.h  UserData.cpp  UserData.h
tests/: CMakeLists.txt
tests/data/: CMakeLists.txt  valgrind.suppression
tests/data/en_FAKELANG/: CMakeLists.txt
tests/data/en_FAKELANG/LC_MESSAGES/: CMakeLists.txt  foo.po
tests/data/libusermetrics/themes/: default.xml
tests/integration/: CMakeLists.txt
tests/integration/libusermetricsinput/: CMakeLists.txt  TestMetricManager.cpp
tests/integration/libusermetricsoutput/: CMakeLists.txt  TestUserMetrics.cpp
tests/libusermetrics-output/: CMakeLists.txt  foo.cpp
tests/libusermetricsoutput/: CMakeLists.txt  TestInfographicModel.cpp
tests/testutils/: CMakeLists.txt  DBusTest.cpp  DBusTest.h  MockSignalReceiver.cpp  MockSignalReceiver.h  QColorPrinter.cpp  QColorPrinter.h  QStringPrinter.cpp  QStringPrinter.h  QVariantListPrinter.cpp  QVariantListPrinter.h  QVariantPrinter.cpp  QVariantPrinter.h  main.cpp
tests/unit/: CMakeLists.txt
tests/unit/libusermetricsinput/: CMakeLists.txt  TestMetricImpl.cpp  TestMetricManagerImpl.cpp  TestMetricUpdate.cpp  TestMetricUpdateImpl.cpp  TestUserMetricInputCAPI.cpp
tests/unit/libusermetricsoutput/: CMakeLists.txt  QModelListener.cpp  QModelListener.h  TestColorThemeImpl.cpp  TestDataSet.cpp  TestGSettingsColorThemeProvider.cpp  TestQVariantListModel.cpp  TestSyncedUserMetricsStore.cpp  TestUserMetricsImpl.cpp
tests/unit/qml/: CMakeLists.txt  tst_Metrics.qml  tst_QmlTests.cpp  tst_increment.qml  tst_metrics.qml
tests/unit/qml/UserMetricsTest/: CMakeLists.txt  DBusQuery.cpp  DBusQuery.h  MetricInfo.cpp  MetricInfo.h  TestPlugin.cpp  TestPlugin.h  dbusquery.cpp  dbusquery.h  metricinfo.cpp  metricinfo.h  qmldir  testplugin.cpp  testplugin.h
tests/unit/usermetricsservice/: CMakeLists.txt  TestAuthentication.cpp  TestUserMetricsService.cpp
tests/utils/: CMakeLists.txt  MockSignalReceiver.cpp  MockSignalReceiver.h  QColorPrinter.cpp  QStringPrinter.cpp  QStringPrinter.h  QVariantPrinter.cpp
(+11 files in other folders)
